--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -12,6 +12,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:maxLength="30"
         android:text="@string/track"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:maxLength="15"
             android:layout_weight="1"
             android:text="@string/album"
             android:textAlignment="textEnd"
@@ -49,6 +51,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
+            android:maxLength="15"
             android:text="@string/artist"
             android:textAlignment="textStart"
             app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +138,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:scrollbars="vertical"
-        android:text="lyric"
+        android:text=""
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
